# instaget

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
build-result/: README.md
scripts/: install_ubuntu_deps  prepare_build  prepare_build_linux_from_osx  upload_bin.py
src/: argument.rs  data.rs  http.rs  lib.rs  main.rs
