[package]
name = "instaget"
version = "1.0.1"
authors = ["Wuriyanto <wuriyanto48@yahoo.co.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "instaget"
path = "src/lib.rs"

[[bin]]
name = "instaget"
path = "src/main.rs"


[dependencies]
url = { version = "2", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.132"
rand = "0.8.4"